--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "zod": "^3.22.2"
     },
     "devDependencies": {
-        "daisyui": "^3.7.4"
+        "daisyui": "^3.7.4",
+        "encoding": "^0.1.13"
     }
 }
